--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,6 @@
 		--primary: 204.7 36.7% 61%;
 		--primary-foreground: 0 0% 98%;
 
-		/* --primary-grad: 207 51.28% 30.59%; */ /* more darker color*/
 		--primary-grad: 207 33% 42%;
 
 		--primary-grad-from: 191 51.7% 77.3%; /* #A7D8E3 */
@@ -53,6 +52,11 @@
 
 		--primary: 0 0% 98%;
 		--primary-foreground: 240 5.9% 10%;
+
+		--primary-grad: 0 0% 98%;
+
+		--primary-grad-from: 191 51.7% 40%;
+		--primary-grad-to: 0.97 76% 50%;
 
 		--secondary: 240 3.7% 15.9%;
 		--secondary-foreground: 0 0% 98%;
