--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,10 +20,10 @@
 		--primary: 204.7 36.7% 61%;
 		--primary-foreground: 0 0% 98%;
 
-		--primary-grad: 207 33% 42%;
+		--primary-grad: rgba(28, 57, 142, 0.6);
 
-		--primary-grad-from: 191 51.7% 77.3%; /* #A7D8E3 */
-		--primary-grad-to: 0.97 76% 87%; /* #F7C4CD */
+		--primary-grad-from: rgba(16, 78, 100, 0.2);
+		--primary-grad-to: rgba(28, 57, 142, 0.2);
 
 		--secondary: 240 4.8% 95.9%;
 		--secondary-foreground: 240 5.9% 10%;
@@ -57,10 +57,10 @@
 		--primary: 0 0% 98%;
 		--primary-foreground: 240 5.9% 10%;
 
-		--primary-grad: 0 0% 98%;
+		--primary-grad: rgb(255, 255, 255);
 
-		--primary-grad-from: 191 51.7% 40%;
-		--primary-grad-to: 0.97 76% 50%;
+		--primary-grad-from: rgba(16, 78, 100, 0.7);
+		--primary-grad-to: rgba(28, 57, 142, 0.7);
 
 		--secondary: 240 3.7% 15.9%;
 		--secondary-foreground: 0 0% 98%;
