--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,70 +5,55 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
+/* 
+**** HEX ****
+#4076a2
+#72a5d3
+#000000
+#1b1b1b
+#424242
+#6d6d6d
+#9b9b9b
+#cccccc → #e9e9e9
+#ffffff
+#ea605f
+#b22d35
+
+**** URL ****
+https://colors.design4u.jp/app/index.html?hex0=%234076a2&stp0=2&str0=1.0&ptn0=0&adj0=0&vvd0=0&sft0=0&pos0=4&vps0=4&hex1=%23ffffff&stp1=7&str1=1.0&ptn1=0&adj1=0&vvd1=0&sft1=0&pos1=0&vps1=5&hex2=%23b22d35&stp2=2&str2=1.0&ptn2=1&adj2=0&vvd2=0&sft2=0&pos2=4&vps2=3&
+*/
+
 @layer base {
 	:root {
-		--background: 0 0% 100%;
-		--foreground: 240 10% 3.9%;
-
-		--card: 0 0% 100%;
-		--card-foreground: 240 10% 3.9%;
-
-		--popover: 0 0% 100%;
-		--popover-foreground: 240 10% 3.9%;
+		--background: 255 255 255; /* #ffffff */
+		--foreground: 27 27 27; /* #1b1b1b */
 
 		--primary: 64 118 162; /* #4076a2 */
+		--primary-foreground: 255 255 255; /* #ffffff */
 
-		--secondary: 240 4.8% 95.9%;
-		--secondary-foreground: 240 5.9% 10%;
-
-		--muted: 240 4.8% 95.9%;
-		--muted-foreground: 240 3.8% 46.1%;
-
-		--accent: 240 4.8% 95.9%;
-		--accent-foreground: 240 5.9% 10%;
+		--muted: 233 233 233; /* #e9e9e9 */
+		--muted-foreground: 43 43 43; /* #2b2b2b */
 
 		--destructive: 178 45 53; /* #b22d35 */
-
-		--border: 240 5.9% 90%;
-		--input: 240 5.9% 90%;
-		--ring: 240 10% 3.9%;
 
 		--radius: 0.5rem;
 	}
 
 	.dark {
-		--background: 240 10% 3.9%;
-		--foreground: 0 0% 98%;
-
-		--card: 240 10% 3.9%;
-		--card-foreground: 0 0% 98%;
-
-		--popover: 240 10% 3.9%;
-		--popover-foreground: 0 0% 98%;
+		--background: 27 27 27; /* #1b1b1b */
+		--foreground: 255 255 255; /* #ffffff */
 
 		--primary: 114 165 211; /* #72a5d3 */
+		--primary-foreground: 27 27 27; /* #1b1b1b */
 
-		--secondary: 240 3.7% 15.9%;
-		--secondary-foreground: 0 0% 98%;
-
-		--muted: 240 3.7% 15.9%;
-		--muted-foreground: 240 5% 64.9%;
-
-		--accent: 240 3.7% 15.9%;
-		--accent-foreground: 0 0% 98%;
+		--muted: 43 43 43; /* #2b2b2b */
+		--muted-foreground: 233 233 233; /* #e9e9e9 */
 
 		--destructive: 234 96 95; /* #ea605f */
-
-		--border: 240 3.7% 15.9%;
-		--input: 240 3.7% 15.9%;
-		--ring: 240 4.9% 83.9%;
 	}
 }
 
 @layer base {
-	* {
-		@apply border-border;
-	}
 	body {
 		@apply bg-background text-foreground;
 	}
